<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff012345"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".DemoDisplayActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <!-- **************************************************************************** -->

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#ff654321" >
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff123456"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="3dp"
            android:text="@string/pixel_density" />

        <TextView
            android:id="@+id/pixel_density_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:padding="3dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff123456"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="3dp"
            android:text="@string/default_orientation" />

        <TextView
            android:id="@+id/default_orientation_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:padding="3dp" />
    </LinearLayout>

    <!-- **************************************************************************** -->

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#ff654321" >
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="3dp"
            android:text="@string/current_display_size" />

        <TextView
            android:id="@+id/current_display_size_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:padding="3dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="3dp"
            android:text="@string/current_orientation" />

        <TextView
            android:id="@+id/current_orientation_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:padding="3dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="3dp"
            android:text="@string/current_rotation" />

        <TextView
            android:id="@+id/current_rotation_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:padding="3dp" />
    </LinearLayout>

    <!-- **************************************************************************** -->

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#ff654321" >
    </View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#123456"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="3dp"
            android:text="@string/one_inch_button" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:orientation="horizontal"
            android:padding="3dp" >

            <Button
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/one_inch_button_text" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#123456"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:padding="3dp"
            android:text="@string/half_inch_circle" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:orientation="horizontal"
            android:padding="3dp" >

            <ca.yorku.eecs.mack.demodisplay.HalfInchView
                android:id="@+id/half_inch_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <!-- **************************************************************************** -->

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#ff654321" >
    </View>

</LinearLayout>